# INPE

Computacao_Aplicada_I/Dr_GRibeiro/DataStruct/BinHeap/: main  main.cpp  minHeap.hpp
Computacao_Aplicada_I/Dr_GRibeiro/DataStruct/Lista02/: CMakeLists.txt  README.md  heap.cpp  heap.hpp  main.cpp
Computacao_Aplicada_I/Dr_GRibeiro/DataStruct/New_Point_Polygon/: main.cpp
Computacao_Aplicada_I/Dr_GRibeiro/DataStruct/P_Polygon_Original/: main.cpp  polygon.hpp  prog
Computacao_Aplicada_I/Dr_GRibeiro/DataStruct/Point_Polygon/: CMakeLists.txt  main  main.cpp  polygon.cpp  polygon.hpp  polygon_itb  prog  teste
Computacao_Aplicada_I/Dr_GRibeiro/DataStruct/binaryHeap/: heap.hpp  main.cpp  main.out
Computacao_Aplicada_I/Dr_GRibeiro/DataStruct/doublyLinkedList/: README.md  doubleLinkedList.hpp  example_doubleLinkedList.cpp
Computacao_Aplicada_I/Dr_GRibeiro/DataStruct/sizedStack/: CMakeLists.txt  sizedStack.hpp
Matematica_Computacional_I/Dr_Leonardo/: dados.csv  interpolacao (suporte-HP-EliteDesk-800-G1-SFF's conflicted copy 2019-05-06).py  interpolacao.py
Matematica_Computacional_I/Dr_Reinaldo/Lista_Exercicio/: pmodel.m
Matematica_Computacional_I/Dr_Reinaldo/Lista_Exercicio/.ipynb_checkpoints/: Tutorial_Jupyter-checkpoint.ipynb  adaptativeColorednoise-checkpoint.ipynb  csv_pronatec-checkpoint.ipynb  pmodel-checkpoint.ipynb
Matematica_Computacional_I/Dr_Reinaldo/Lista_Exercicio/Jupyter/: Cullen and Frey.R  HURST_MATLAB.txt  Lista_Exercicio_Helvecio_Neto.ipynb  README  create_signals.py  pmodel.ipynb  pmodel.py  prob_dist.py
(+77 files in other folders)
